// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateEvent can create event while logged in 1`] = `
Object {
  "data": Object {
    "createEvent": Object {
      "event": Object {
        "createdAt": "[timestamp-5]",
        "createdBy": "[id-2]",
        "description": "[random-3]",
        "eventEndTime": "[timestamp-2]",
        "eventStartTime": "[timestamp-1]",
        "headerImageFile": "[random-5]",
        "id": "[id-1]",
        "isDraft": false,
        "isHighlighted": true,
        "location": "[random-4]",
        "name": "[random-1]",
        "openQuotaSize": 0,
        "registrationEndTime": "[timestamp-4]",
        "registrationStartTime": "[timestamp-3]",
        "signupClosed": true,
        "signupOpen": false,
        "signupUpcoming": false,
        "slug": "[random-2]",
        "updatedAt": "[timestamp-5]",
        "updatedBy": "[id-3]",
      },
    },
  },
}
`;

exports[`CreateEvent can't create an event while logged out 1`] = `
Object {
  "data": Object {
    "createEvent": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "exception": Object {
          "code": "LOGIN",
          "severity": "ERROR",
          "where": "PL/pgSQL function app_public.create_event(app_public.event_input,app_public.create_event_quotas[],app_public.create_event_questions[]) line 8 at RAISE",
        },
      },
      "locations": Array [
        Object {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "You must log in to create a event",
      "path": Array [
        "createEvent",
      ],
    },
  ],
}
`;

exports[`CreateEvent must specify at least one event quota 1`] = `
Object {
  "data": Object {
    "createEvent": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "exception": Object {
          "code": "DNIED",
          "severity": "ERROR",
          "where": "PL/pgSQL function app_public.create_event_quotas(uuid,app_public.create_event_quotas[]) line 14 at RAISE
SQL statement \\"SELECT * from app_public.create_event_quotas(v_event.id, quotas)\\"
PL/pgSQL function app_public.create_event(app_public.event_input,app_public.create_event_quotas[],app_public.create_event_questions[]) line 47 at PERFORM",
        },
      },
      "locations": Array [
        Object {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "You must specify at least one quota",
      "path": Array [
        "createEvent",
      ],
    },
  ],
}
`;
